--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,7 +1,8 @@
 .contact-form-container {
     max-width: 600px;
     margin: 50px auto;
-    background-color: var(--formcolor);
+    background-color: whitesmoke;
+    border-radius: 20px;
     color: #000000;
     padding: 20px;
     border: none;
@@ -20,6 +21,7 @@ label {
 input,
 textarea {
     width: 100%;
+    max-width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
