--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -124,8 +124,7 @@ footer {
   background-color: #ccfe06;
   color: #333;
   padding: 20px 0;
-  margin: 20px;
-  display: flex;
+  margin-top: 20px;
   justify-content: center;
   align-items: center;
   height: 4vh;
