--- a/CSS/index.css
+++ b/CSS/index.css
@@ -58,7 +58,7 @@ body {
     border-radius: 5px;
     max-width: 1000px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 30px;
 }
 
 /* Grid styling for the row */
