--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,7 +1,7 @@
 .contact-form-container {
     max-width: 600px;
     margin: 50px auto;
-    background-color: whitesmoke;
+    background-color: white;
     border-radius: 20px;
     color: #000000;
     padding: 20px;
@@ -65,4 +65,37 @@ input[type="submit"] {
     padding: 10px;
     border: none;
     border-radius: 4px;
+}
+
+
+
+
+
+.contact-details-container {
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    max-width: 60%;
+    padding: 20px;
+    background-color: white; /* white background */
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+}
+
+.contact-info {
+    margin: 10px;
+    padding: 20px;
+    background-color: var(--color2); /* White background for the contact info blocks */
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); /* Slightly stronger shadow for the contact info blocks */
+}
+
+#sub-heading {
+    color: #333333; /* Darker text for sub-headings */
+    margin-bottom: 10px;
+}
+
+#contact-detail {
+    color: #666666; /* Lighter text for contact details */
+    line-height: 1.5; /* Spacing out the lines a bit for readability */
 }
