--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,6 @@
 /* CSS for a 5-color palette */
 
+
 :root {
     --color1: #000000; /* Black */
     --color2: #c2ee0a; /* Yellow 1 */
@@ -11,6 +12,12 @@
     --font2: 'HK Grotesk', sans-serif;
   }
   
+  html, body{
+
+    height: 100%;
+    margin: 0;
+
+  }
 
   /* Codeb below is for new nav bar prototype */
 
@@ -22,8 +29,14 @@
     color: #eceff1;
     width: 100%;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
+.content-container {
+     flex:1;
+    
+}
 header {
     background-color: #000000;
     color: #ecf0f100;
@@ -124,7 +137,7 @@ footer {
   background-color: #ccfe06;
   color: #333;
   padding: 20px 0;
-  margin-top: 20px;
+  margin-top: auto;
   justify-content: center;
   align-items: center;
   height: 4vh;
