--- a/CSS/stockManagement.css
+++ b/CSS/stockManagement.css
@@ -35,7 +35,7 @@ tr:nth-child(even) {
 
 .stock-green {
     background-color: #32CD32; /* Green */
-    background-image: linear-gradient(315deg, #32CD32 0%, #0c9e0c 74%);
+    background-image: linear-gradient(315deg, #32CD32 0%, #32CD32 74%);
     color: #ffffff;
 }
 
@@ -53,7 +53,7 @@ tr:nth-child(even) {
 
 .stock-red {
     background-color: #FF4500;
-    background-image: linear-gradient(315deg, #FF4500 0%, #FF6347 74%);
+     background-image: linear-gradient(315deg, #FF4500 0%, #FF4500 74%); 
     color: #ffffff;
 }
 
