--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -205,3 +205,11 @@ th {
 }
 
 tr:hover {background-color: #f5f5f5;}
+
+.admin-management-container h1{
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 100%;
+    overflow-x: auto;
+}
