--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 100px;
     min-height: 100vh;
     padding: 60px;
 }
