--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,7 +23,8 @@
 
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
+    margin-top: 100px;
+    margin-bottom: 500px;
     padding: 0;
     background-color: #000000;
     color: #eceff1;
@@ -33,12 +34,17 @@
     flex-direction: column;
 }
 
-.content-container {
-     flex:1;
+
     
-}
+
 header {
     background-color: #000000;
+    height: 40px;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
     color: #ecf0f100;
     padding: 10px 20px;
     margin: none;
@@ -135,12 +141,17 @@ nav a:hover {
 footer {
   padding: 10px 20px;
   background-color: #ccfe06;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: auto;
+  display: flex;
   color: #333;
   padding: 20px 0;
   margin-top: auto;
   justify-content: center;
   align-items: center;
-  height: 4vh;
+  /* height: 4vh; */
   width: 100vw;
 }
 
