--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -7,6 +7,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+
+
 /* Users management specific styling */
 .user-management-container h1 {
     color: #333;
@@ -15,6 +17,15 @@
     max-width: 100%;
     overflow-x: auto;
 }
+
+#edit-admin-title{
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 100%;
+    overflow-x: auto;
+}
+
 
 /* Table styling */
 table {
@@ -264,4 +275,12 @@ tr:hover {background-color: #f5f5f5;}
 
 
 
-
+#addProductFormContainer {
+    display: none;
+    width: 90%;
+    margin: 20px auto;
+    padding: 20px;
+    background: #fff;
+    color: #333;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
